<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ksolveImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/imageView_margin"
                android:layout_marginTop="@dimen/imageView_margin"
                android:layout_marginEnd="@dimen/imageView_margin"
                android:layout_marginBottom="@dimen/imageView_margin"
                android:src="@drawable/ksolve" />

            <TextView
                android:id="@+id/personName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ksolveImg"
                android:layout_centerInParent="true"
                app:drawableStartCompat="@drawable/ic_baseline_person_24"
                android:padding="@dimen/textView_padding"
                android:singleLine="true"
                android:text="@string/textView1_text"
                android:textSize="@dimen/text_size"
                tools:ignore="UnknownId" />


            <EditText
                android:id="@+id/Et1_enterName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personName"
                android:layout_centerInParent="true"
                android:hint="@string/editText1_hint"
                android:lines="1"
                android:minHeight="@dimen/editText_minHeight" />

            <TextView
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Et1_enterName"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:padding="@dimen/textView_padding"
                android:text="@string/textView2_text"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/Et2_enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailId"
                android:layout_centerInParent="true"
                android:hint="@string/editText2_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:minHeight="@dimen/editText_minHeight" />

            <TextView
                android:id="@+id/emailPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Et2_enterEmail"
                android:layout_centerInParent="true"
                app:drawableStartCompat= "@drawable/ic_baseline_email_24"
                android:padding="@dimen/textView_padding"
                android:text="@string/textView3_text"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/Et3_enterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailPassword"
                android:layout_centerInParent="true"
                android:hint="@string/editText3_hint"
                android:inputType="textPassword"
                android:minHeight="@dimen/editText_minHeight"
                android:singleLine="true" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Et3_enterPassword"
                android:padding="@dimen/textView_padding"
                android:text="@string/textView4_text"
                android:textSize="@dimen/text_size" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="20dp"
                android:layout_below="@+id/gender">

                <RadioButton
                    android:checked="true"
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gender"
                    android:minHeight="@dimen/radioButton_minHeight"
                    android:text="@string/radioButton1_text"
                    android:textSize="@dimen/text_size"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radioButton1"
                    android:minHeight="@dimen/radioButton_minHeight"
                    android:text="@string/radioButton2_text"
                    android:textSize="@dimen/text_size" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroup"
                android:minHeight="@dimen/checkBox_minHeight"
                android:text="@string/checkBox_text"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox"
                android:entries="@array/months"
                android:minHeight="@dimen/spinner_minHeight"
                android:padding="@dimen/spinner_padding" />

            <Button
                android:id="@+id/btn_AddData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spMonth"
                android:layout_centerHorizontal="true"
                android:background="#00c464"

                android:text="@string/Button_text"
                android:textAllCaps="false"
                android:textColor="#000" />

            <Button
                android:id="@+id/btn_Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_AddData"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:text="Submit" />

            <Button
                android:id="@+id/Btn_showToast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_Submit"
                android:layout_centerHorizontal="true"
                android:onClick="Toast"
                android:text="showToast"/>


        </RelativeLayout>

    </ScrollView>



</RelativeLayout>